client/css/less/components/ticket-list.less
// --------------------------------------
// Ticket List
// --------------------------------------

.ticket-list {
  .ticket {
    cursor: pointer;
    border-bottom: 1px solid @border;

    .header {
      padding: 10px 20px;
      .clearfix;

      hgroup {
        width: 80%;
      }

      &.unread {
        background: @notifyBG;
      }

      &.notify:before {
        content: "";
        display: block;
        position: absolute;
        top: 2px;
        left: 3px;
        bottom: 2px;
        width: 6px;
        background-color: lighten(@active, 15%);
      }

      .attrs {
        float: right;
        width: 20%;

        time {
          display: block;
          margin: 0;
          font-weight: 400;
          font-size: 16px;
          text-align: right;
        }

        .tags {
          display: none;
          .clearfix;
          position: relative;
          margin: 0;
          padding: 0;
          width: 100%;
          list-style: none;

          li {
            margin: 0;
            padding: 0;
            display: inline-block;
            float: right;
          }
        }
      }
    }
  }

  .active {
    background: @activeBright;

    .title, h4, time {
      color: @darkGray !important;
    }

    .header {
      &.unread {
        background: none !important;
      }

      .attrs .tags li[class*="color-"] i {
        text-shadow: 1px 1px 0 fade(@black, 20%), 0 0 1px fade(@black, 20%);
      }
    }
  }
}

